k8s_base/librespeed/librespeed-namespace-final.yaml
# Виртуальный кластер для организации и структурирования объектов Kubernetes
# (пространство имен) для разворачивая приложения
apiVersion: v1
kind: Namespace
metadata:
  name: final
