k8s_base/librespeed/namespace-final.yaml
# Виртуальный кластер для организации и структурирования объектов Kubernetes
apiVersion: v1
kind: Namespace
metadata:
  name: final
