k8s_base/librespeed/librespeed-deployment.yaml
# Описывает, как создавать и управлять набором Pod’ов
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      imagePullSecrets:
        - name: registrysecret
      containers:
      - name: librespeed
        image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
        ports:
          - containerPort: 80
        volumeMounts:
          - name: servers-volume
            mountPath: /servers.json
            subPath: servers.json
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
      volumes:
      - name: servers-volume
        configMap:
          name: librespeed-servers
      - name: mysql-sql
        configMap:
          name: mysql-sql
